# furuta-pendulum-controller

./: .clang-format  .clang-tidy  .gitignore  CMakeConfig.h.in  CMakeLists.txt  CPackConfig.cmake  README.md  ROADMAP.md  flake.nix  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  reinstall-llvm.sh
.github/workflows/: clang-format.yml  cmake-multi-platform.yml  codeql.yml  typos.yml
benchmark/: CMakeLists.txt  benchmarkPOC.cpp
cmake/: Sanitizer.cmake
include/: AngleSensor.h  Configuration.h  SensorInterface.h
src/: AngleSensor.cpp  CMakeLists.txt  DCMotor.cpp  main.cpp
src/config/: CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationDefault.h  ConfigurationInterface.h  ConfigurationName.h  ConfigurationNameEnum.h  Setting.h
src/controller/: CMakeLists.txt  Controller.cpp  Controller.h  ControllerInterface.h  TECSController.cpp  TECSController.h
src/hal/: ActuatorInterface.h  AngleSensor.cpp  AngleSensor.h  AngleSensorProto.cpp  AngleSensorProto.h  CMakeLists.txt  DCMotor.cpp  DCMotor.h  DCMotorProto.cpp  DCMotorProto.h  SensorInterface.h
src/proto/: CMakeLists.txt  actuators.proto  sensors.proto
test/: CMakeLists.txt  hello_test.cpp
test/config/: CMakeLists.txt  ConfigurationTest.cpp
test/controller/: CMakeLists.txt  ControllerTest.cpp  TECSControllerTest.cpp
test/hal/: AngleSensorTest.cpp  CMakeLists.txt
test/mocks/: MockConfig.h
